--- a/app/src/main/res/xml/me.xml
+++ b/app/src/main/res/xml/me.xml
@@ -1,3 +1,11 @@
 <layout width="100%" height="100%">
+    <layout width="100%" height="100%">
+        <scroll class="main" layout="flow">
+
+        </scroll>
+        <canvas class="topbar">
+            <text class="title">个人</text>
+        </canvas>
+    </layout>
 
 </layout>
